Comments started in experiment notebooks

--- a/EfficientNet.ipynb
+++ b/EfficientNet.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "3f9df38c-7fe2-4be1-a740-15d167ff45c4",
+   "metadata": {},
+   "source": [
+    "# Notebook for running EfficientNet experiments\n",
+    "Contributions: Christoph Nötzli, Erik Norén and Sushruth Badri <br>\n",
+    "Comments: Erik Norén 14/12-22"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cd793aef",
    "metadata": {},
    "source": [
@@ -15,6 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imports\n",
     "import tensorflow as tf\n",
     "import data.imageReading as ir\n",
     "from fairness import fairnessMetrics as fm\n",
@@ -35,12 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# image size selected according to EfficientNetB3 input size\n",
     "image_size = (300,300)\n",
     "batch_size = 128\n",
-    "\n",
-    "# Create new datasets\n",
-    "#(ds_train, train_batches, ds_val, val_batches, ds_test, test_batches, count_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces\", image_size, batch_size, preprocess_input)\n",
-    "#(ffds_train, fftrain_batches, ffds_val, ffval_batches, ffds_test, fftest_batches, ffcount_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/FairFace\", image_size, batch_size, preprocess_input)\n",
     "\n",
     "# Load datasets from current _split folders\n",
     "(ds_train, train_batches, ds_val, val_batches, ds_test, test_batches, count_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces_split\", image_size, batch_size, None, False, False)\n",
@@ -103,7 +111,8 @@
    "id": "3c4dc718-70c5-414a-959e-68852934bc64",
    "metadata": {},
    "source": [
-    "## Test EfficientNet Museum"
+    "## Test EfficientNet Museum\n",
+    "Train and test EfficientNet model using Museum data set, with no pre- or in-processing bias mitigation methods applied"
    ]
   },
   {
@@ -121,6 +130,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # build model without augmentation\n",
     "    model = m.build_model(False, (300,300), \"Efficient\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -134,7 +144,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight=None, weight=False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -151,6 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -163,10 +174,9 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model without augmentation\n",
     "    model = m.build_model(False, (300,300), \"Efficient\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -175,6 +185,7 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (300,300), None, 5, 20)\n",
@@ -183,6 +194,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_effnet_baseline\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -191,7 +203,8 @@
    "id": "8a3cd7f2-9da4-4e40-b4e2-3d6031ec684d",
    "metadata": {},
    "source": [
-    "## Test EfficientNet Museum (weighted) "
+    "## Test EfficientNet Museum (weighted) \n",
+    "Train and test EfficientNet model using Museum data set, with bias mitigation method reweighting applied"
    ]
   },
   {
@@ -207,6 +220,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model without augmentation\n",
     "    model = m.build_model(False, (300,300), \"Efficient\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -221,6 +235,7 @@
     "                           metrics=metric_list)\n",
     "\n",
     "\n",
+    "# Train model with class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -237,6 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -249,10 +265,10 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model without augmentation\n",
     "    model = m.build_model(False, (300,300), \"Efficient\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -261,6 +277,7 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (300,300), class_weight, 5, 20)\n",
@@ -269,6 +286,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_re_effnet\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -277,7 +295,8 @@
    "id": "12522c88-52c9-4df1-86e7-1844cada3b1a",
    "metadata": {},
    "source": [
-    "## Test EfficientNet Museum augmented (unweighted) "
+    "## Test EfficientNet Museum augmented (unweighted) \n",
+    "Train and test EfficientNet model using Museum data set, with bias mitigation method data set augmentation applied"
    ]
   },
   {
@@ -293,6 +312,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model with augmentation layers\n",
     "    model = m.build_model(True, (300,300), \"Efficient\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -306,7 +326,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, None, False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -323,6 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -335,10 +356,9 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model with augmentation layers\n",
     "    model = m.build_model(True, (300,300), \"Efficient\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -347,6 +367,7 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (300,300), None, 5, 20)\n",
@@ -355,6 +376,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_aug_effnet\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -363,7 +385,8 @@
    "id": "d09f7e84",
    "metadata": {},
    "source": [
-    "# FairFace"
+    "# FairFace\n",
+    "For transfer learning EfficientNet model is trained on the FairFace data set in order to create a base model."
    ]
   },
   {
@@ -371,7 +394,8 @@
    "id": "b4354921",
    "metadata": {},
    "source": [
-    "## Test EfficientNet FairFace (unweighted) "
+    "## Test EfficientNet FairFace (unweighted) \n",
+    "Train and test EfficientNet model using Museum data set, with no pre- or in-processing bias mitigation methods applied"
    ]
   },
   {
@@ -387,6 +411,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model without augmentation layers\n",
     "    model = m.build_model(False, (300,300), \"Efficient\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -400,7 +425,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ffds_train, fftrain_batches, ffds_val, ffval_batches, None, False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -417,6 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ffds_test, fftest_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ffds_val, ffval_batches, test_predict, test_labels, dir_name)"
    ]
@@ -426,7 +452,8 @@
    "id": "6061d853",
    "metadata": {},
    "source": [
-    "## Test EfficientNet FairFace (weighted) "
+    "## Test EfficientNet FairFace (weighted) \n",
+    "Train and test EfficientNet model using FairFace data set, with bias mitigation method reweighting applied"
    ]
   },
   {
@@ -441,6 +468,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model without augmentation layers\n",
     "    model = m.build_model(False, (300,300), \"Efficient\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -454,7 +482,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train model with class weights\n",
     "utils.train_model(model, epochs, ffds_train, fftrain_batches, ffds_val, ffval_batches, class_weight)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -471,6 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ffds_test, fftest_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ffds_val, ffval_batches, test_predict, test_labels, dir_name)"
    ]
@@ -480,7 +509,8 @@
    "id": "cd1989a0",
    "metadata": {},
    "source": [
-    "## Test EfficientNet FairFace augmented (unweighted) "
+    "## Test EfficientNet FairFace augmented (unweighted) \n",
+    "Train and test EfficientNet model using FairFace data set, with bias mitigation method data set augmentation applied"
    ]
   },
   {
@@ -496,6 +526,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model with augmentation layers\n",
     "    model = m.build_model(True, (300,300), \"Efficient\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -509,7 +540,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ffds_train, fftrain_batches, ffds_val, ffval_batches, None, False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -526,6 +557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ffds_test, fftest_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ffds_val, ffval_batches, test_predict, test_labels, dir_name)"
    ]
@@ -535,7 +567,8 @@
    "id": "69d3be2b",
    "metadata": {},
    "source": [
-    "# Transfer Learning"
+    "# Transfer Learning\n",
+    "Here the experiments for performing transfer learning are performed. The base EfficientNet models trained on the FairFace data set are loaded. These models then have some of their layers frozen and is then trained again using the Museum data set."
    ]
   },
   {
@@ -543,7 +576,8 @@
    "id": "bcbd0154",
    "metadata": {},
    "source": [
-    "## Transfer learning without augmentation and reweighting"
+    "## Transfer learning without augmentation and reweighting\n",
+    "Transfer learning with EfficientNet, with no pre- or in-processing bias mitigation methods applied. Trained and tested with Museum data set."
    ]
   },
   {
@@ -557,8 +591,8 @@
     "class_weight = mit.findClassWeights(train_batches)\n",
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model EfficientNet_FairFace.h5 exists\n",
+    "dir_name = \"XXX_XXX_EfficientNet_Fairface\"\n",
     "\n",
     "with strategy.scope():\n",
     "    # Choose the correct FairFace model\n",
