--- a/Xception.ipynb
+++ b/Xception.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a4b2fb49-c577-4a0c-99f2-3949e9c263d2",
+   "metadata": {},
+   "source": [
+    "# Notebook for running Xception experiments\n",
+    "Contributions: Christoph Nötzli, Erik Norén and Sushruth Badri <br>\n",
+    "Comments: Erik Norén 14/12-22"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c19182a3",
    "metadata": {},
    "source": [
@@ -15,6 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imports\n",
     "import tensorflow as tf\n",
     "import data.imageReading as ir\n",
     "from fairness import fairnessMetrics as fm\n",
@@ -35,11 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# image size selected according to Xception input size\n",
     "image_size = (299,299)\n",
     "batch_size = 128\n",
-    "# Create new datasets\n",
-    "#(ds_train, train_batches, ds_val, val_batches, ds_test, test_batches, count_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces\", image_size, batch_size, preprocess_input)\n",
-    "#(ffds_train, fftrain_batches, ffds_val, ffval_batches, ffds_test, fftest_batches, ffcount_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/FairFace\", image_size, batch_size, preprocess_input)\n",
     "\n",
     "# Load datasets from current _split folders\n",
     "(ds_train, train_batches, ds_val, val_batches, ds_test, test_batches, count_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces_split\", image_size, batch_size, None, False, False)\n",
@@ -102,7 +111,8 @@
    "id": "d8add24d-c145-46e0-9b6a-c354ed8ad1e0",
    "metadata": {},
    "source": [
-    "## Test Xception Museum"
+    "## Test Xception Museum\n",
+    "Train and test Xception model using Museum data set, with no pre- or in-processing bias mitigation methods applied"
    ]
   },
   {
@@ -120,6 +130,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # build model without augmentation\n",
     "    model = m.build_model(False, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -133,7 +144,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight=None, weight=False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -150,6 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -162,10 +174,9 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model without augmentation\n",
     "    model = m.build_model(False, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -174,6 +185,7 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (299,299), None, 5, 20)\n",
@@ -182,6 +194,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_xcep_baseline\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -190,7 +203,8 @@
    "id": "02218098-a690-469d-bc77-234531804871",
    "metadata": {},
    "source": [
-    "## Test Xception Museum (weighted) "
+    "## Test Xception Museum (weighted) \n",
+    "Train and test Xception model using Museum data set, with bias mitigation method reweighting applied"
    ]
   },
   {
@@ -206,6 +220,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model without augmentation\n",
     "    model = m.build_model(False, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -219,7 +234,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train model with class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -236,6 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -248,10 +264,9 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model without augmentation\n",
     "    model = m.build_model(False, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -260,6 +275,7 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (299,299), class_weight, 5, 20)\n",
@@ -268,6 +284,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_re_xcep\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -276,7 +293,8 @@
    "id": "f1a849ce-578b-4216-9f68-f55ab81d5c9d",
    "metadata": {},
    "source": [
-    "## Test Xception Museum augmented (unweighted) "
+    "## Test Xception Museum augmented (unweighted) \n",
+    "Train and test Xception model using Museum data set, with bias mitigation method data set augmentation applied"
    ]
   },
   {
@@ -292,6 +310,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model with augmentation layers\n",
     "    model = m.build_model(True, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -305,7 +324,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, None, False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -322,6 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -334,10 +354,9 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model with augmentation layers\n",
     "    model = m.build_model(True, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -346,6 +365,7 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (299,299), None, 5, 20)\n",
@@ -354,6 +374,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Museum_aug_xcep\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -362,7 +383,8 @@
    "id": "63876238",
    "metadata": {},
    "source": [
-    "# FairFace"
+    "# FairFace\n",
+    "For transfer learning Xception model is trained on the FairFace data set in order to create a base model. "
    ]
   },
   {
@@ -370,7 +392,8 @@
    "id": "7a7de377",
    "metadata": {},
    "source": [
-    "## Test Xception FairFace (unweighted) "
+    "## Test Xception FairFace (unweighted) \n",
+    "Train and test Xception model using FairFace data set, with no pre- or in-processing bias mitigation methods applied"
    ]
   },
   {
@@ -386,6 +409,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model without augmentation layers\n",
     "    model = m.build_model(False, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -399,7 +423,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ffds_train, fftrain_batches, ffds_val, ffval_batches, None, False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -418,6 +442,7 @@
    },
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ffds_test, fftest_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ffds_val, ffval_batches, test_predict, test_labels, dir_name)"
    ]
@@ -427,7 +452,8 @@
    "id": "87891f6c",
    "metadata": {},
    "source": [
-    "## Test Xception FairFace (weighted)"
+    "## Test Xception FairFace (weighted)\n",
+    "Train and test Xception model using FairFace data set, with bias mitigation method reweighting applied"
    ]
   },
   {
@@ -443,6 +469,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model without augmentation layers\n",
     "    model = m.build_model(False, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -456,7 +483,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train model with class weights\n",
     "utils.train_model(model, epochs, ffds_train, fftrain_batches, ffds_val, ffval_batches, class_weight)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -473,6 +500,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ffds_test, fftest_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ffds_val, ffval_batches, test_predict, test_labels, dir_name)"
    ]
@@ -482,7 +510,8 @@
    "id": "6a365549",
    "metadata": {},
    "source": [
-    "## Test Xception FairFace Augmented (unweighted)"
+    "## Test Xception FairFace augmented (unweighted)\n",
+    "Train and test Xception model using FairFace data set, with bias mitigation method data set augmentation applied"
    ]
   },
   {
@@ -498,6 +527,7 @@
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "with strategy.scope():\n",
+    "    # Build model with augmentation layers\n",
     "    model = m.build_model(True, (299,299), \"Xception\")\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -511,7 +541,7 @@
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
-    "\n",
+    "# Train the model without class weights\n",
     "utils.train_model(model, epochs, ffds_train, fftrain_batches, ffds_val, ffval_batches, None, False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -528,6 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ffds_test, fftest_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ffds_val, ffval_batches, test_predict, test_labels, dir_name)"
    ]
@@ -537,7 +568,8 @@
    "id": "e5601a4b",
    "metadata": {},
    "source": [
-    "# Transfer Learning"
+    "# Transfer Learning\n",
+    "Here the experiments for performing transfer learning are performed. The base Xception models trained on the FairFace data set are loaded. These models then have some of their layers frozen and is then trained again using the Museum data set."
    ]
   },
   {
@@ -545,7 +577,8 @@
    "id": "74551f9c",
    "metadata": {},
    "source": [
-    "## Transfer learning without augmentation and reweighting"
+    "## Transfer learning without augmentation and reweighting\n",
+    "Transfer learning with Xception, with no pre- or in-processing bias mitigation methods applied. Trained and tested with Museum data set."
    ]
   },
   {
@@ -559,8 +592,8 @@
     "class_weight = mit.findClassWeights(train_batches)\n",
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model Xception_FairFace.h5 exists\n",
+    "dir_name = \"XXX_XXX_Xception_Fairface\"\n",
     "\n",
     "with strategy.scope():\n",
     "    # Choose the correct FairFace model\n",
